--- a/config/database.yml
+++ b/config/database.yml
@@ -14,12 +14,12 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
-  host: localhost
+  password: toor
+  host: 0.0.0.0
 
 development:
   <<: *default
-  database: GiftMe_development
+  database: test
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
